--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tushare",
+  "name": "@chuigeng/tushare",
   "version": "1.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,13 +31,13 @@
     "axios": "^1.7.7"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
+    "@jest/globals": "^29.7.0",
     "@types/node": "^22.7.5",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "rimraf": "^5.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "dotenv": "^16.4.5"
+    "typescript": "^5.6.3"
   }
 }
