--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typescript"
   ],
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
   },
   "author": "chuigeng",
   "license": "ISC",
